--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "React Parcel Setup",
   "main": "index.js",
   "scripts": {
-    "start": "parcel ./public/index.html --open"
+    "start": "parcel ./public/index.html --open --no-cache"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/config-default": "^2.8.3",
+    "@parcel/transformer-sass": "^2.8.3",
+    "@parcel/transformer-typescript-tsc": "^2.8.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
@@ -16,11 +19,18 @@
     "eslint": "^8.32.0",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "parcel-bundler": "^1.12.5",
+    "parcel": "^2.8.3",
+    "process": "^0.11.10",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@parcel/transformer-css": "^2.8.3",
+    "@reduxjs/toolkit": "^1.9.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.2.2"
+  },
+  "browserslist": "> 0.25%, not dead"
 }
